<resources>
    <string name="app_name">HW04_Gymlog_V3.0.0</string>
    <string name="exercise">Exercise</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="weight">Weight</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="weights">Weight</string>
    <string name="enter_rep">Enter Rep</string>
    <string name="log">Log</string>
    <string name="reps">Reps</string>
    <string name="welcome_to_the_gymlog_n_please_sign_in">Welcome to the GymLog. \n Please Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="preference_file_key">daclinkPrefernceFileNameGymLog</string>
    <string name="preference_user_ID_key">daclinkPreferenceUserIDKeyGymLog</string>
</resources>